--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "nextgen-web",
-  "private": true,
+  "name": "nextgen-server",
   "version": "0.1.0",
+  "type": "module",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "express": "^4.18.0",
+    "node-fetch": "^3.3.1",
+    "dotenv": "^16.0.0",
+    "body-parser": "^1.19.0"
   }
 }
