--- a/package.json
+++ b/package.json
@@ -13,3 +13,11 @@
     "body-parser": "^1.19.0"
   }
 }
+{
+  "name": "nextgen",
+  "private": true,
+  "scripts": {
+    "build": "npm run build --prefix web",
+    "start": "npm run start --prefix server"
+  }
+}
