--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "nextgen-server",
-  "version": "0.1.0",
+  "name": "nextgen",
+  "version": "1.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "build": "npm run build --prefix web",
+    "start": "npm run start --prefix server",
+    "dev": "nodemon server/index.js"
+  },
+  "engines": {
+    "node": "22.x"
   },
   "dependencies": {
     "express": "^4.18.0",
@@ -12,15 +17,4 @@
     "dotenv": "^16.0.0",
     "body-parser": "^1.19.0"
   }
-}
-{
-  "name": "nextgen",
-  "private": true,
-  "scripts": {
-    "build": "npm run build --prefix web",
-    "start": "npm run start --prefix server"
-  }
-}
-"engines": {
-  "node": "22.x"
 }
