--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
+  "dependencies": {
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.0",
+    "node-fetch": "^3.3.2"
+  },
   "engines": {
     "node": "22.x"
-  },
-  "dependencies": {
-    "express": "^4.18.0",
-    "node-fetch": "^3.3.1",
-    "dotenv": "^16.0.0",
-    "body-parser": "^1.19.0"
   }
 }
